appId: ${APP_ID}
---
- runFlow: lib/login.yaml
- tapOn:
    id: footer-workout
- tapOn:
    text: ".*Demo Program.*"
- tapOn:
    id: workout-tab-overhead-press
- tapOn:
    id: complete-set
    index: 2
- takeScreenshot: set-types-amrap-popup
- tapOn:
    id: input-completed-reps-plus
- tapOn:
    id: input-completed-reps-plus
- tapOn:
    id: input-completed-reps-plus
- tapOn:
    id: modal-amrap-submit
- tapOn:
    id: finish-workout
- tapOn:
    text: "OK"
- tapOn:
    id: footer-workout
- tapOn:
    text: ".*Demo Program.*"
- tapOn:
    id: workout-tab-romanian-deadlift
- tapOn:
    id: complete-set
    index: 3
- takeScreenshot: set-types-rpe-popup
- tapOn:
    id: modal-amrap-submit
- takeScreenshot: set-types-rpe-logged
- tapOn:
    id: finish-workout
- tapOn:
    text: "OK"
- tapOn:
    id: footer-workout
- tapOn:
    text: ".*Demo Program.*"
- tapOn:
    id: workout-tab-bicep-curl
- takeScreenshot: set-types-per-side
- tapOn:
    id: finish-workout
- tapOn:
    text: "OK"
- tapOn:
    id: footer-workout
- tapOn:
    id: change-next-day
- tapOn:
    id: menu-item-next-day-picker-1
- takeScreenshot: set-types-next-workout
