appId: ${APP_ID}
---
- runFlow: lib/login.yaml
- tapOn:
    id: footer-program
- tapOn:
    id: navbar-3-dot
- takeScreenshot: sharing-programs-menu
- tapOn:
    id: bottom-sheet-copy-link
    index: 0
- extendedWaitUntil:
    visible: "Copied link to the clipboard.*"
    timeout: 20000
- takeScreenshot: sharing-programs-public-link
- tapOn:
    text: "OK"
- tapOn:
    id: navbar-3-dot
- tapOn:
    id: bottom-sheet-generate-image
- extendedWaitUntil:
    visible: "Generate image"
    timeout: 10000
- takeScreenshot: sharing-programs-image-settings
- tapOn:
    id: tab-preview
- takeScreenshot: sharing-programs-image-preview
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          point: 50%, 8%
- runFlow:
    when:
      platform: Android
    commands:
      - pressKey: Back
- tapOn:
    id: navbar-3-dot
- tapOn:
    id: bottom-sheet-copy-link
    index: 1
- extendedWaitUntil:
    visible: "Copied link to the clipboard.*"
    timeout: 10000
- takeScreenshot: sharing-programs-private-link
- tapOn:
    text: "OK"
- tapOn:
    id: footer-me
- scrollUntilVisible:
    element:
      id: menu-item-export-all-programs-to-text-file
    direction: DOWN
    centerElement: true
- takeScreenshot: sharing-programs-export-text
- scrollUntilVisible:
    element:
      id: menu-item-program
    direction: UP
- tapOn:
    id: menu-item-program
- tapOn:
    id: import-program
- takeScreenshot: sharing-programs-import
- tapOn:
    id: modal-import-from-link-cancel
